# Iys_searcher

./: CMakeLists.txt  LICENSE  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  searchlogic.cpp  searchlogic.h  searchworker.cpp  searchworker.h
styles/: stylesheet.qss
